# Runtime

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crate.yml
docs/: deep-test-plan.md  implementation-plan.md
docs/adr/: 0001-general-runtime-contract.md  0002-complete-protocol-and-operation-semantics.md  0003-keep-interactive-streaming-exec-outside-v0.2-core.md
src/: client.rs  clock.rs  conformance.rs  driver.rs  error.rs  lib.rs  managed.rs  provider.rs  registry.rs  selection.rs
src/conformance/: profiles.rs
src/contract/: artifact.rs  capabilities.rs  execution.rs  mod.rs  network.rs  observation.rs  process.rs  protocol.rs  resource.rs  unit.rs
src/docker/: driver.rs  factory.rs  mod.rs  plan.rs  resolver.rs
src/operation/: file.rs  mod.rs  record.rs
src/state/: file.rs  mod.rs  record.rs  transition_tests.rs
src/state/file/: fs.rs  tests.rs
tests/: conformance_profiles.rs  deterministic_faults.rs  general_runtime.rs  process_races.rs  protocol_golden.rs
tests/golden/: action-request-v1.json  apply-request-v1.json  capabilities-v3.json  exec-request-v1.json  exec-result-v1.json  inspection-found-v1.json  inspection-not-found-v1.json  log-chunk-v1.json  log-query-v1.json  observation-v2.json  removal-v1.json  request-receipt-v1.json  request-receipt-v2.json  unit-record-v2.json  unit-spec-v2.json
tests/process_races/: driver.rs
tests/support/: fault_driver.rs  fixtures.rs  mod.rs
