[package]
name = "a3s-runtime"
version = "0.1.0"
edition = "2021"
description = "Provider-neutral execution contract and client for A3S runtimes"
license = "MIT"
repository = "https://github.com/A3S-Lab/Runtime"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
