[package]
name = "a3s-runtime"
version = "0.2.0"
edition = "2021"
description = "Provider-neutral execution contract and client for A3S runtimes"
license = "MIT"
repository = "https://github.com/A3S-Lab/Runtime"

[dependencies]
async-trait = "0.1"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
